<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:background="#09c6df"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#fafafa"
            android:text="Profile"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"

            android:translationY="0dp" />

        <Button
            android:id="@+id/maps_button"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#fafafa"
            android:text="Fossil Fuels World Map"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:translationY="0dp" />

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#fafafa"
            android:text="Fossil Fuels Quiz"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="0dp" />

        <Button
            android:id="@+id/news_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/quiz_button"
            android:backgroundTint="#fafafa"
            android:text="News"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationY="0dp" />

        <Button
            android:id="@+id/forum_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#fafafa"
            android:text="Forum"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="0dp"
            android:translationY="0dp" />


    </LinearLayout>


</RelativeLayout>
