...
            android:fontFamily="sans-serif-light"
            android:text="Title"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_news_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_news_title"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
...
